# source_scout

./: .gitignore  AGENTS.md  README.md  kilo.jsonc  pyproject.toml  requirements.txt
.kilo/agents/: ask.md  plan.md  reviewer.md  worker.md
.kilo/commands/: plan.md  review.md
.kilo/plans/: 1777228118798-shiny-river.md  1777234050911-calm-lagoon.md
.kilo/rules/: 00-conventions.md  10-workflow.md  20-mcp-conventions.md
.kilo/skills/example/: SKILL.md
.kilo/skills/fastmcp/: SKILL.md
.kilo/skills/github-api/: SKILL.md
docs/: architecture.md  complexity-budget.md  development-notes.md  repo-finder-direction.md  requirements.md  source-scout-direction.md  source_scout_direction.md
evals/golden/: assessment_smoke_v1.json  local_explore_source_scout_v1.json  nextjs_backend_v1.json  ui_reuse_v1.json
src/repo_finder/: __init__.py  __main__.py  bundles.py  cache.py  catalog.py  cloner.py  constants.py  eval_runner.py  evidence.py  fastcontext.py  github_client.py  lmstudio.py  models.py  pattern_extractor.py  pipeline.py  ranker.py  repo_inspector.py  server.py  snapshotter.py
src/source_scout/: __init__.py  __main__.py  assessment_eval.py  assessor.py  bundles.py  capabilities.py  catalog.py  catalog_audit.py  catalog_scoring.py  cli_status.py  eval_runner.py  eval_support.py  evidence.py  evidence_ledger.py  fastcontext.py  fastcontext_constants.py  fastcontext_prompts.py  fastcontext_routing.py  lmstudio.py  local_explore_eval.py  models.py  pipeline.py  profiler.py  repo_map.py  server.py
src/source_scout/rlm/: __init__.py  prompts.py  schemas.py  session.py  tools.py
tests/: __init__.py  conftest.py  fastcontext_helpers.py  test_assessment_eval.py  test_assessor.py  test_cache.py  test_catalog_audit.py  test_catalog_ui_reuse.py  test_check_cli.py  test_cloner.py  test_deep_inspect.py  test_eval_runner.py  test_evidence_ledger.py  test_fastcontext.py  test_fastcontext_cli.py  test_fastcontext_local_explore.py  test_fastcontext_loop.py  test_fastcontext_refinement.py  test_fastcontext_tools.py  test_github_client.py  test_integration.py  test_lmstudio.py  test_local_explore_eval.py  test_pattern_extractor.py  test_ranker.py  test_repo_inspector.py  test_repo_map.py  test_reuse_assessments.py  test_rlm_skeleton.py  test_server.py  validate.mjs
