[project]
name = "source-scout"
version = "0.1.0"
description = "Local source reuse scouting and assessment tool"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "duckdb>=1.0.0,<2.0.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
]

[project.scripts]
source-scout = "source_scout.__main__:main"
source_scout = "source_scout.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "git"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:authlib.jose module is deprecated, please use joserfc instead.:authlib.deprecate.AuthlibDeprecationWarning:fastmcp.server.auth.providers.jwt",
]
